Fix Horizontal scroll Carousel - About us

--- a/assets/scss/pages/_standard-page.scss
+++ b/assets/scss/pages/_standard-page.scss
@@ -19,7 +19,9 @@
         .side-content {
             .content-wrapper {
                 @include breakpoint(large up) {
+                    overflow: hidden;
                     padding-right: 14%;
+                    margin-right: -24px;
                 }
 
                 .h2 {
